--- a/node-api/.gitignore
+++ b/node-api/.gitignore
@@ -1,5 +1,4 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/node_modules
-/.angular
+# /node_modules
