--- a/node-api/.env
+++ b/node-api/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DB_CONNECTION = mongodb://localhost:27017/shoppingMart
+DB_CONNECTION =mongodb+srv://bharat:EqnwUpI5RVJufWTy@cluster0.i3fkd.mongodb.net/celebs?retryWrites=true&w=majority
 SESSION_SECRETKEY = EQU83GNCA7PIZB12XSR
 JWT_SECRETKEY = ZAQ!@WSXCDE#$RFVBGT%MJUYIKLP
 GMAIL_API =  bharat@amwebtech.com
