working on demo

--- a/node-api/.env
+++ b/node-api/.env
@@ -3,7 +3,7 @@ DB_CONNECTION = mongodb://localhost:27017/angular-node-training
 SESSION_SECRETKEY = EQU83GNCA7PIZB12XSR
 JWT_SECRETKEY = ZAQ!@WSXCDE#$RFVBGT%MJUYIKLP
 GMAIL_API =  bharat@amwebtech.com
-GMAIL_PASSWORD = bharat@9755436247
+GMAIL_PASSWORD = 'mgpprlnjmrvyxzzk'
 HOST_NAME = http://localhost:3000/
 WEBSITE_URL = http://localhost:4200/#/
 DELETE_PHOTOS = 'photos/'
