--- a/node-api/.env
+++ b/node-api/.env
@@ -1,9 +1,9 @@
 PORT = 3000
-DB_CONNECTION = mongodb://localhost:27017/demo
+DB_CONNECTION = =mongodb+srv://bharat:EqnwUpI5RVJufWTy@cluster0.i3fkd.mongodb.net/demo?retryWrites=true&w=majority
 SESSION_SECRETKEY = EQU83GNCA7PIZB12XSR
 JWT_SECRETKEY = ZAQ!@WSXCDE#$RFVBGT%MJUYIKLP
-GMAIL_API =  test@amwebtech.com
-GMAIL_PASSWORD = 'mgpprlnjmrvyxzzl'
+GMAIL_API =  bharat@amwebtech.com
+GMAIL_PASSWORD = 'mgpprlnjmrvyxzzk'
 HOST_NAME = http://localhost:3000/
 WEBSITE_URL = http://localhost:3000/#/
 DELETE_PHOTOS = 'photos/'
